# segformer

./: .gitignore  README.md  pyproject.toml  run_cli.py
.github/workflows/: python-tests.yml
examples/: config.toml  mvtec_bottle.toml  mvtec_bottle_smoke.toml
scripts/: fetch_mvtec_ad.py  run_full_pipeline.cmd  run_full_pipeline.ps1
src/industrial_patch_inspector/: aggregation.py  alignment.py  analysis.py  calibration.py  cli.py  config.py  dataset.py  losses.py  metrics.py  models.py  pipeline.py  refiner.py  roi.py  structures.py  tiling.py  training.py
tests/: __init__.py  conftest.py  test_aggregation.py  test_analysis.py  test_calibration.py  test_config.py  test_dataset.py  test_metrics.py
